workloads/rollout-demo/00-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  annotations:
    konghq.com/gatewayclass-unmanaged: 'true'
  name: kong
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    konghq.com/publish-service: kong/kong-kong-proxy
  name: kong
  namespace: kong
spec:
  gatewayClassName: kong
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
